force-app/main/default/objects/Customer__c/fields/Car_loan_ammount__c.field-meta.xml
<CustomField>
    <fullName>Car_loan_ammount__c</fullName>
    <label>Car loan ammount</label>
    <length>18</length>
    <type>Text</type>
</CustomField>