force-app/main/default/objects/Customer__c/fields/Financer__c.field-meta.xml
<CustomField>
    <fullName>Financer__c</fullName>
    <label>Financer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABC Car Loan</fullName>
            </value>
            <value>
                <fullName>DEF Car Loan</fullName>
            </value>
            <value>
                <fullName>Gruh Home Loan</fullName>
            </value>
            <value>
                <fullName>Pavitra Home loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>