force-app/main/default/objects/Customer__c/fields/Home_loan_ammount__c.field-meta.xml
<CustomField>
    <fullName>Home_loan_ammount__c</fullName>
    <label>Home loan ammount</label>
    <length>18</length>
    <type>Text</type>
</CustomField>