force-app/main/default/objects/Customer__c/recordTypes/Home_loan.recordType-meta.xml
<RecordType>
    <fullName>Home_loan</fullName>
    <active>true</active>
    <label>Home loan</label>
</RecordType>