force-app/main/default/objects/Customer__c/validationRules/First_name_xxx.validationRule-meta.xml
<ValidationRule>
    <fullName>First_name_xxx</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(  First_name__c )</errorConditionFormula>
    <errorDisplayField>First_name__c</errorDisplayField>
    <errorMessage>This rule is used to prevent first name</errorMessage>
</ValidationRule>